--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>HBD Oviya</title>	    
+    <title>HBD Buddy</title>	    
     <link type="text/css" rel="stylesheet" href="./file/default.css">
     <script type="text/javascript" src="./file/jquery.min.js"></script>
     <script type="text/javascript" src="./file/jscex.min.js"></script>
@@ -30,13 +30,14 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <span class="say">Have a glorious birthday 💞</span><br>
-                    <span class="say">May the light of beautiful day 🎈</span><br>
-                    <span class="say">Fill your heart with and make your life shine. 🍀</span><br>
-                    <span class="say">And give u many happiness 💕</span><br>
-                    <span class="say">Happy birthday my dear friend. ❤️</span><br>
-                    <span class="say">Hope u have a great day today ❤️😘</span><br>
-                    <span class="say">             ~Kavi & friends❤️</span><br>
+                    <span class="say">Special wishes for a special person, 💞</span><br>
+                    <span class="say"> May your birthday brings 🎈🍀</span><br>
+                    <span class="say">out the best in you and 💕</span><br>
+                    <span class="say">I wish God showers you ❤️</span><br>
+                    <span class="say">with happiness and 😀 </span><br>
+		    <span class="say">new opportunities in your life,🥰 ❣❣ </span><br>
+		    <span class="say">Happy birthday Dear friend. 💕💞 </span><br>
+                    <span class="say"> ~Kavi & friends❤️</span><br>
                 </div>
             </div>
             <div id="clock-box">
