--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             <div id="text">
                 <div id="code">
                     <span class="say">Special wishes for a special person, 💞</span><br>
-                    <span class="say"> May your birthday brings 🎈🍀</span><br>
-                    <span class="say">out the best in you and 💕</span><br>
+                    <span class="say"> May your birthday brings 🍀</span><br>
+                    <span class="say">out the best in you and 🎈</span><br>
                     <span class="say">I wish God showers you ❤️</span><br>
                     <span class="say">with happiness and 😀 </span><br>
 		    <span class="say">new opportunities in your life,🥰 ❣❣ </span><br>
-		    <span class="say">Happy birthday Dear friend. 💕💞 </span><br>
-                    <span class="say"> ~Kavi & friends❤️</span><br>
+		    <span class="say">Happy birthday Dear friend. 💕❤️ </span><br>
+                    <span class="say"> ~ Kavi 💞</span><br>
                 </div>
             </div>
             <div id="clock-box">
