--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     </script>
 </head>
 <body>
+    <div id="navi">
+        <nav>
+            <h1 id="slogan">Happy Birthday</h1>
+        </nav>
+        </div>
     <div id="main">
         <div id="error"><a href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh-CN&brand=CHMI">Chrome</a> (<a href="http://firefox.com.cn/download/">Firefox</a>)</div>
         <audio autoplay="autoplay" height="100" width="100" id="myAudio">
